Fix z-index issue

--- a/src/components/CartProduct/CartProduct.css
+++ b/src/components/CartProduct/CartProduct.css
@@ -30,7 +30,6 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  z-index: -1;
 }
 
 .amount-box {
